gap text done incl correction

--- a/public/style.css
+++ b/public/style.css
@@ -146,6 +146,17 @@ body {
     max-width: 800px;
     padding: 30px;
     text-align: center;
+    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  .gap-input {
+    border: 2px solid #d8cbd0;
+    border-radius: 5px;
+    color: #000000;
+    font-size: 24px;
+    padding: 5px;
+    margin-right: 20px;
   }
   
   .solution-heading {
@@ -327,7 +338,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     font-weight: 400;
-    margin-top: 10px;
+    margin: 20px;
     padding: 5px 10px;
     transition: background-color 0.2s ease-in-out;
   }
